[project]
name = "toolbox"

[tool.poetry]
name = "toolbox"
version = "0.1.0"
description = "Manager for LLM tool execution"
authors = ["Erik Wiffin <erik.wiffin@gmail.com>"]
packages = [{include = "toolbox"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/erikwiffin/py-llm-toolbox"
Repository = "https://github.com/erikwiffin/py-llm-toolbox"
Issues = "https://github.com/erikwiffin/py-llm-toolbox/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "openai (>=2.8.1,<3.0.0)",
    "nbstripout (>=0.8.2,<0.9.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "pyright (>=1.1.407,<2.0.0)",
]

[tool.black]
target-version = ['py311']

[tool.basedpyright]
typeCheckingMode = "recommended"
reportAny = false
reportExplicitAny = false